# keepsake

./: .editorconfig  .gitignore  Cargo.toml  README.md  SECURITY.md  deny.toml  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
app/: eslint.config.mjs  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.setup.ts
app/src/: App.tsx  ipc.ts  main.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: dto.rs  errors.rs  lib.rs  main.rs  state.rs
app/src-tauri/src/commands/: albums.rs  analytics.rs  auth.rs  export.rs  map.rs  map_tiles.rs  ml.rs  mod.rs  nearp.rs  peer.rs  people.rs  pets.rs  search.rs  share.rs  sources.rs  text_search.rs  timeline.rs
app/src/bindings/: AlbumView.ts  AssetDetailView.ts  AssetFaceView.ts  BundleId.ts  DownloadEvent.ts  ExportOptions.ts  ExportReport.ts  GpsView.ts  IncomingShareView.ts  IngestState.ts  IngestStatus.ts  MapPoint.ts  MemoryGroupView.ts  MlReindexReport.ts  MlStatus.ts  ModelFileStatus.ts  ModelsStatus.ts  NearDupCluster.ts  NearDupMember.ts  PairingTicketView.ts  PeerAcceptedView.ts  PersonView.ts  PersonYearMemoryView.ts  PetAssetView.ts  PlaceView.ts  PublicLinkBundleReport.ts  PublicLinkView.ts  SearchHitView.ts  SearchRequest.ts  SessionHandle.ts  ShareInviteView.ts  ShareRecipientView.ts  SmartAlbumView.ts  SmartRuleView.ts  SourceView.ts  TimelineCursor.ts  TimelineEntryView.ts  TimelinePage.ts  TripView.ts  UserSummaryView.ts  (+1 more)
app/src/components/: Avatar.tsx  Breadcrumb.tsx  Button.tsx  Card.tsx  Chip.tsx  Confirm.tsx  DropdownMenu.tsx  EmptyState.tsx  EntityChip.tsx  IconButton.tsx  LoadingState.tsx  Modal.tsx  Popover.tsx  Sheet.tsx  Tabs.tsx  Thumbnail.tsx  Toast.tsx  Tooltip.tsx  _gallery.tsx  cn.ts  index.ts  primitives.css  useToast.ts
app/src/components/__tests__/: primitives.test.tsx
app/src/state/: navigation.ts  session.ts
app/src/state/__tests__/: navigation.test.ts
app/src/styles/: tokens.css
app/src/ui/albums/: AlbumDetail.tsx  Albums.tsx  AlbumsHub.tsx  albums_hub.css
app/src/ui/cmdk/: CommandPalette.tsx
app/src/ui/duplicates/: Duplicates.tsx
app/src/ui/for_you/: ForYou.tsx  ForYouPlaceholder.tsx  for_you.css
app/src/ui/map/: MapLibreMap.tsx  MapView.tsx  map.css
app/src/ui/memories/: Memories.tsx
app/src/ui/ml/: ModelDownloadWizard.tsx
app/src/ui/peers/: Peers.tsx
app/src/ui/people/: People.tsx  PersonDetail.tsx  PersonFaceThumb.tsx
app/src/ui/pets/: Pets.tsx
app/src/ui/places/: PlaceDetail.tsx  Places.tsx  places.css
app/src/ui/search/: Search.tsx  SearchHub.tsx  search_hub.css
app/src/ui/settings/: SettingsSheet.tsx  appearance.ts  settings.css
app/src/ui/share/: IncomingSharesPanel.tsx  ShareAlbumModal.tsx  index.ts
app/src/ui/shell/: LegacyShell.tsx  SettingsStub.tsx  Shell.tsx  Sidebar.tsx  StatusOrb.tsx  shell.css
app/src/ui/smart_albums/: SmartAlbumDetail.tsx  SmartAlbums.tsx
app/src/ui/sources/: Sources.tsx
app/src/ui/timeline/: AssetDetail.tsx  FaceOverlay.tsx  ThumbImage.tsx  Timeline.tsx
app/src/ui/trips/: Trips.tsx
app/src/ui/unlock/: Unlock.tsx
app/test-results/: .last-run.json
app/test-results/smoke-create-user-→-add-source-→-timeline-→-album-export-chromium/: error-context.md
app/tests/e2e/: cmdk.spec.ts  smoke.spec.ts
crates/core/: Cargo.toml
crates/core/examples/: clip_topk.rs  face_f1.rs
crates/core/src/: blind_text.rs  error.rs  lib.rs  public_link.rs  public_link_bundle.rs
crates/core/src/analytics/: memories.rs  mod.rs  smart_albums.rs  trips.rs
crates/core/src/cas/: mod.rs  store.rs
crates/core/src/crypto/: envelope.rs  format.rs  keystore.rs  mod.rs
crates/core/src/db/: migrate.rs  mod.rs  queries.rs  schema.rs
crates/core/src/geocode/: mod.rs
crates/core/src/ingest/: enqueue.rs  mod.rs  provenance.rs  sidecar.rs
crates/core/src/ingest/adapters/: generic.rs  google_takeout.rs  iphone_folder.rs  mod.rs
crates/core/src/media/: derive.rs  face_crop.rs  mod.rs  pairs.rs  probe.rs
crates/core/src/ml/: bundles.rs  clip.rs  deps_probe.rs  downloader.rs  faces.rs  loader.rs  manifest.rs  mod.rs  nearp.rs  ocr.rs  pets.rs  phash.rs  reindex.rs  runtime.rs  tokenizer.rs  worker_exec.rs
crates/core/src/search/: mod.rs
crates/core/src/share/: mod.rs
crates/core/tests/: album_password.rs  crypto_roundtrip.rs  hidden_vault.rs  hidden_vault_filter.rs  ingest_golden.rs  ml_tier_b.rs  multi_user.rs  near_dup_set.rs  perf_search.rs  perf_timeline.rs  sidecar_roundtrip.rs
crates/core/tests/support/: bulk.rs  mod.rs
crates/replica/: Cargo.toml
crates/replica/src/: main.rs
crates/sync/: Cargo.toml
crates/sync/src/: accept.rs  blobs.rs  docs.rs  lib.rs  peer.rs  receive.rs  share.rs  ticket.rs
crates/sync/tests/: peer_pairing.rs  share_revocation.rs  two_peer_share.rs
docs/: design-system.md  ml-cuda-setup.md  release.md  replica.md
plans/: README.md  architecture.md  phase-1-foundation.md  phase-2-browsing.md  phase-3-peers-smart.md  phase-4-extras.md
scripts/: build.sh  codegen_ts.sh  dev.sh  download_models.sh  make_fixtures.py  replica.service
