[package]
name = "mv-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Media Vault desktop shell (Tauri v2)."

[lib]
name = "mv_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

mv-core = { path = "../../crates/core" }
mv-sync = { path = "../../crates/sync" }

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
secrecy.workspace = true
thiserror.workspace = true
ts-rs.workspace = true
hex.workspace = true
rusqlite.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
