[package]
name = "mv-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Media Vault desktop shell (Tauri v2)."

[lib]
name = "mv_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

mv-core = { path = "../../crates/core" }
mv-sync = { path = "../../crates/sync" }
iroh-gossip.workspace = true
iroh-blobs.workspace = true

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
secrecy.workspace = true
thiserror.workspace = true
ts-rs.workspace = true
hex.workspace = true
base32.workspace = true
base64.workspace = true
rusqlite.workspace = true

[features]
# `ml-models` is on by default so plain `cargo tauri build` /
# `cargo tauri dev` / `pnpm tauri build` produces a binary with the
# on-device AI pipeline compiled in. Skipping it produced "ML off" on
# the top-nav badge and confused everyone who didn't know to pass
# `--features ml-models`. Disable explicitly for a slim build:
#   cargo tauri build --no-default-features --features custom-protocol
default = ["custom-protocol", "ml-models"]
custom-protocol = ["tauri/custom-protocol"]
# Phase 2.1 — forward on-device ML feature flags down to mv-core. The app
# shell never talks to ort directly; all wiring lives in mv-core behind
# these gates.
ml-models = ["mv-core/ml-models"]
# ml-cuda / ml-coreml must pull mv-app's OWN `ml-models` too, otherwise the
# `#[cfg(feature = "ml-models")]` gates inside `commands/ml.rs` compile out
# and `try_bootstrap_runtime` silently does nothing — the badge reads
# "ML — no weights" even though mv-core has a fully-loaded runtime.
ml-cuda = ["ml-models", "mv-core/ml-cuda"]
ml-coreml = ["ml-models", "mv-core/ml-coreml"]
