[package]
name = "mv-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Media Vault core library: crypto, CAS, schema, ingest, media."

[lib]
name = "mv_core"
path = "src/lib.rs"

[lints]
workspace = true

[features]
# Phase 2: gated pieces that need ONNX model files.
# Default OFF — users with models run `scripts/download_models.sh` and build
# with `--features ml-models`. The rest of the pipeline (pHash, near-dup,
# search metadata filters, face/person CRUD) works without the flag.
default = []
ml-models = ["dep:ort", "dep:tokenizers", "dep:ndarray", "dep:pathfinding", "dep:sha2", "dep:libloading"]
# Optional execution-provider passthroughs. Off by default; pick one based on
# the box you're targeting. No-op when `ml-models` is off.
ml-cuda = ["ml-models", "ort?/cuda"]
ml-coreml = ["ml-models", "ort?/coreml"]

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true }
async-trait.workspace = true

libsodium-sys-stable.workspace = true
blake3.workspace = true
zeroize.workspace = true
secrecy.workspace = true
subtle.workspace = true

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes.workspace = true
hex.workspace = true
base32.workspace = true
base64.workspace = true

rusqlite.workspace = true

image.workspace = true
libheif-rs.workspace = true
nom-exif.workspace = true
kamadak-exif.workspace = true
ffmpeg-next.workspace = true
rawloader.workspace = true

walkdir.workspace = true
globset.workspace = true
mime.workspace = true
infer.workspace = true

ts-rs.workspace = true

# Phase 2.1 — optional ML deps, pulled in only via the `ml-models` feature.
ort = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
pathfinding = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
libloading = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
