[package]
name = "mv-sync"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Media Vault peer sync (Phase 3). Stub in Phase 1."

[lib]
name = "mv_sync"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true }

# Phase 3.1 peer networking.
iroh.workspace = true
iroh-base.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true

# Phase 3.2 — album sharing.
iroh-docs.workspace = true
iroh-blobs.workspace = true
iroh-gossip.workspace = true
n0-future.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
futures = "0.3"

base32.workspace = true
hex.workspace = true
chrono.workspace = true
rusqlite.workspace = true

mv-core = { path = "../core" }

[dev-dependencies]
tempfile.workspace = true
secrecy.workspace = true
